@@ -11,7 +11,6 @@ extern "C" {
 #include "pcp/crypto.h"
 #include "pcp/defines.h"
 #include "pcp/ed.h"
-#include "pcp/getpass.h"
 #include "pcp/jenhash.h"
 #include "pcp/key.h"
 #include "pcp/keyhash.h"
@@ -22,6 +21,7 @@ extern "C" {
 #include "pcp/platform.h"
 #include "pcp/plist.h"
 #include "pcp/randomart.h"
+#include "pcp/readpass.h"
 #include "pcp/scrypt.h"
 #include "pcp/structs.h"
 #include "pcp/uthash.h"
